# student-records

./: .gitignore  check_index.py  pyproject.toml
main/: middleware.py  models.py  serializers.py  urls.py  views.py
main /: admin.py  filters.py  serializers.py  urls.py  views.py
main /migrations/: 0001_initial.py
root/: settings.py  urls.py
